Update social media links in footer for all pages to fix alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,8 +418,11 @@ input[type="email"],
 }
 
 #copyrights-socials {
+    display: flex;
+    justify-content: space-around;
+    width: 220px;
     margin: 0 auto;
-    padding: 5px 0 0 0;
+    padding: 5px;
 }
 
 #copyrights-socials a {
